// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote Block should render Default 1`] = `
<DocumentFragment>
  <blockquote
    class="css-1hx22vu-QuoteBlockWrapper e1ugt7gl1"
  >
    <p
      class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
    >
      «This is a quote»
    </p>
    <cite
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
    >
      John Doe
    </cite>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithClassName 1`] = `
<DocumentFragment>
  <blockquote
    class="extra-classname css-1hx22vu-QuoteBlockWrapper e1ugt7gl1"
  >
    <p
      class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
    >
      «This is a quote»
    </p>
    <cite
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
    >
      John Doe
    </cite>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithEmotion 1`] = `
<DocumentFragment>
  <blockquote
    class="css-1hx22vu-QuoteBlockWrapper e1ugt7gl1"
  >
    <p
      class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
    >
      «This is a quote»
    </p>
    <cite
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
    >
      John Doe
    </cite>
  </blockquote>
</DocumentFragment>
`;
